<resources>
    <string name="app_name">Sit or Get off the Pot</string>
    <string name="permission_dined_string">This app requires your location. Please Try Again.</string>
    <string name="okay">Okay</string>
    <string name="user_profile">User Profile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="temp">temp</string>
    <string name="if_you_don_t_have_account_register_here">If you don\'t have account register here:</string>
    <string name="add_location">Add Location</string>
    <string name="location_detail">Location Detail</string>
    <string name="full_contact">Full Contact</string>
    <string name="hover">Hover</string>
    <string name="location_name">Location Name</string>
    <string name="register">Register</string>
    <string name="rating">Rating</string>
    <string name="there_no_rest_near_you">There no bathroom near you.</string>
    <string name="textview">TextView</string>
    <string name="map_view">Map view</string>
    <string name="title">Title</string>
    <string name="deatil_place">Deatil Place</string>
    <string name="rating_section">Rating Section</string>
    <string name="add_comment">Add Comment</string>
    <string name="exit">Exit</string>

    <array name="rating_array">
        <item>Hover Worthy</item>
        <item>Full Contact</item>
    </array>

</resources>
