<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detail_screen_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_screen_rating_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rating_section"
        app:layout_constraintEnd_toEndOf="@+id/detail_screen_title_text_view"
        app:layout_constraintStart_toStartOf="@+id/detail_screen_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/detail_screen_title_text_view" />

    <TextView
        android:id="@+id/detail_screen_detail_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/deatil_place"
        app:layout_constraintEnd_toEndOf="@+id/detail_screen_title_text_view"
        app:layout_constraintStart_toStartOf="@+id/detail_screen_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/detail_screen_rating_text_view" />

    <ListView
        android:id="@+id/comment_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/detail_screen_detail_text_view"
        app:layout_constraintStart_toStartOf="@+id/detail_screen_detail_text_view"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="Comments"
        app:layout_constraintEnd_toEndOf="@+id/detail_screen_detail_text_view"
        app:layout_constraintStart_toStartOf="@+id/detail_screen_detail_text_view"
        app:layout_constraintTop_toBottomOf="@+id/detail_screen_detail_text_view" />

</android.support.constraint.ConstraintLayout>